--- a/FrontendProj/src/app/home/home.component.css
+++ b/FrontendProj/src/app/home/home.component.css
@@ -1,8 +1,20 @@
-.tile{
-    margin: 2%;
-    background-color: aquamarine;
-    width: 90%;
-    height: 30%;
-    text-align: center;
-    font-size: 20vh;
+.tile {
+  margin: 20px;
+  width: 90%;
+  height: 170;
+  text-align: center;
+  font-size: 20vh;
+  border-radius: 25px;
+  align-self: center;
+  vertical-align: middle;
+}
+
+#workoutlog {
+  background-color: antiquewhite;
+  background-image: url("./img/workoutlog.jpeg");
+  background-blend-mode: normal;
+}
+
+#caloriecalc {
+  background-color: #8cf477;
 }
