--- a/FrontendProj/src/app/login/login.component.css
+++ b/FrontendProj/src/app/login/login.component.css
@@ -1,18 +1,19 @@
-.page{
-    align-items: center;
-    flex-direction: column;
+.page {
+  align-items: center;
+  flex-direction: column;
 }
-.input{
-    width: 90%;
+.input {
+  width: 90%;
 }
-.form{
-    margin-left: 30;
-    margin-right: 30;
-    flex-grow: 2;
-    vertical-align: middle;
+.form {
+  margin-left: 30;
+  margin-right: 30;
+  flex-grow: 2;
+  vertical-align: middle;
+  align-content: center;
 }
 
-#forgotPw{
-    width: 90%;
-    font-size: 10em;
+#forgotPw {
+  width: 90%;
+  font-size: 10em;
 }
