Add EditInSettingsButton in BMICalculator

--- a/FrontendProj/src/app/bmicalculator/bmicalculator.component.html
+++ b/FrontendProj/src/app/bmicalculator/bmicalculator.component.html
@@ -23,10 +23,9 @@
     <Label text="Bmicalculator"></Label>
   </ActionBar>
   
-  <GridLayout class="page__content">
+  <StackLayout style="color: black">
+    <!--
     <Label class="page__content-icon fas" text="&#xf1ec;"></Label>
-    <Label
-      class="page__content-placeholder"
-      text="<!-- Page content goes here -->"
-    ></Label>
-  </GridLayout>
+   -->
+      <Button text="Edit in Settings" (tap)="editInSettings()"></Button>
+  </StackLayout>
