--- a/FrontendProj/src/app/workoutlogdetails/workoutlog.component.html
+++ b/FrontendProj/src/app/workoutlogdetails/workoutlog.component.html
@@ -20,7 +20,7 @@
     ios.position="left"
   >
   </ActionItem>
-  <Label text="Workoutlog"></Label>
+  <Label text="Workoutlog Details"></Label>
 </ActionBar>
 
 <!-- <GridLayout class="page__content">
