--- a/FrontendProj/src/app/workoutlogdetails/workoutlogdetails.component.html
+++ b/FrontendProj/src/app/workoutlogdetails/workoutlogdetails.component.html
@@ -37,7 +37,7 @@
   <StackLayout class="uebungsdivision">
     <Label class="littleTitle" text="Übungen"></Label>
     <StackLayout class="exercize">
-      <Label class="uebungsliste" text="Übung 1"></Label>
+      <Label class="uebungsliste" text="Sit ups"></Label>
       <Label class="uebungsliste" text="Übung 2"></Label>
       <Label class="uebungsliste" text="Übung 3"></Label>
     </StackLayout>
