--- a/FrontendProj/src/app/home/home.component.css
+++ b/FrontendProj/src/app/home/home.component.css
@@ -13,6 +13,7 @@
   justify-content: center;
   display: flex;
   align-items: center;
+  background-color: #2fa6c6;
 }
 
 /*Einzlne Label; Zum Hintergrund festlegen und individualisieren.*/
