Add bigger titles to screens

--- a/FrontendProj/src/app/bmicalculator/bmicalculator.component.html
+++ b/FrontendProj/src/app/bmicalculator/bmicalculator.component.html
@@ -1,4 +1,4 @@
-<ActionBar>
+<ActionBar title = "BMI Calculator">
     <!--
       Use the NavigationButton as a side-drawer button in Android
       because ActionItems are shown on the right side of the ActionBar
@@ -20,7 +20,7 @@
       ios.position="left"
     >
     </ActionItem>
-    <Label text="Bmi Calculator"></Label>
+    
   </ActionBar>
 
   <GridLayout columns = "*,*" rows = "auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto , auto, auto" class = "m-15, page" >
