--- a/FrontendProj/src/app/featured/featured.component.html
+++ b/FrontendProj/src/app/featured/featured.component.html
@@ -1,5 +1,5 @@
 
-<ActionBar>
+<ActionBar title = "Featured">
     <!-- 
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
@@ -13,7 +13,7 @@
     <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label text="Featured"></Label>
+    
 </ActionBar>
 
 <ScrollView orientation="vertical">
