--- a/FrontendProj/src/app/search/search.component.html
+++ b/FrontendProj/src/app/search/search.component.html
@@ -1,4 +1,4 @@
-<ActionBar>
+<ActionBar title = "Search">
     <!-- 
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
@@ -12,7 +12,7 @@
     <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label text="Search"></Label>
+    
 </ActionBar>
 
 <GridLayout class="page__content">
