--- a/FrontendProj/src/app/workoutlog/workoutlog.component.html
+++ b/FrontendProj/src/app/workoutlog/workoutlog.component.html
@@ -1,4 +1,4 @@
-<ActionBar>
+<ActionBar title = "Workoutlog">
   <!--
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
@@ -20,7 +20,7 @@
     ios.position="left"
   >
   </ActionItem>
-  <Label text="Workoutlog"></Label>
+  
 </ActionBar>
 
 <!-- <GridLayout class="page__content">
