--- a/FrontendProj/src/app/workoutlogdetails/workoutlogdetails.component.html
+++ b/FrontendProj/src/app/workoutlogdetails/workoutlogdetails.component.html
@@ -1,4 +1,4 @@
-<ActionBar>
+<ActionBar title = "Workoutlog Details">
   <!--
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
@@ -20,7 +20,6 @@
     ios.position="left"
   >
   </ActionItem>
-  <Label text="Workoutlog Details"></Label>
 </ActionBar>
 
 <!-- <GridLayout class="page__content">
