--- a/FrontendProj/src/app/home/home.component.html
+++ b/FrontendProj/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<ActionBar>
+<ActionBar title = "Home">
   <!--
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
@@ -20,7 +20,7 @@
     ios.position="left"
   >
   </ActionItem>
-  <Label text="Home"></Label>
+  
 </ActionBar>
 
 <!-- <GridLayout class="page__content">
