--- a/FrontendProj/src/app/login/login.component.html
+++ b/FrontendProj/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<ActionBar>
+<ActionBar title = "Login">
   <!--
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
@@ -20,7 +20,7 @@
     ios.position="left"
   >
   </ActionItem>
-  <Label text="Login"></Label>
+  
 </ActionBar>
 
 <FlexboxLayout class="page">
