Change Margin of BMI Screen

--- a/FrontendProj/src/app/bmicalculator/bmicalculator.component.html
+++ b/FrontendProj/src/app/bmicalculator/bmicalculator.component.html
@@ -23,7 +23,7 @@
     
   </ActionBar>
 
-  <GridLayout columns = "*,*" rows = "auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto , auto, auto" class = "m-15, page" >
+  <GridLayout columns = "*,*" rows = "auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto , auto, auto" class = "m-15" >
     <Label text = "Body Height: " row = "0" col = "0"  class = "labelHeadersBmi" > </Label>
     <Label text = "Body Weight:" row = "1" col = "0"  class = "labelHeadersBmi"></Label>
     <Label text = "Gender:" row = "2" col = "0"   class = "labelHeadersBmi"></Label>
